@@ -1,3 +1,9 @@
+2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 
+
+	* Banter/GroupWindow.cs: Removed unimplemented groups and added Add
+	  Person functionality
+	* Banter/HIGMessageDialog.cs: Fixed up to have a window title
+
 2007-08-03  Brady Anderson <brady.anderson@gmail.com> 
 
 	* Banter/PersonCard.cs: added methods to authorize a user
